= Package NNbenchmark =
- Akshaj Verma, Salabila Mahdi, Patrice Kiener
- Christophe Dutang, John Nash 



NNbenchmark 3.1.9 - 2021-03-09 - Submitted to CRAN
==================================================
- All URLs tested with the new package urlchecker_1.0.0 published on 2021-03-04
- datasets.R: http replaced by https
- datasets.R: NIST pages replaced by a redirection from InModelia's website
- DESCRIPTION and a_intro.R: New links to theairbend3r, Github and InModelia
- DESCRIPTION: Akshaj and Salsabila Orcid numbers 

NNbenchmark 3.1.6 - 2020-09-07 - Submitted to CRAN
==================================================
- v_3.1.5 erased since mixed with 2019 code
- v_3.1.6 copied from v_3.1.4

NNbenchmark 3.1.4 - 2020-08-30
==============================
- timediff() updated time0 <- NA ; time0 <<- time0 detected by CRAN
- Authors@R modified: correct PK email
- Author: orcid number for PK and CD

NNbenchmark 3.1.3 - 2020-08-30
==============================
- timediff() updated time0 <<- NA
- NNSummary() and NNtrainPredict() cat(), print() modified

NNbenchmark 3.1.1 - 2020-08-26
==============================
- DESCRIPTION: add Authors@R
- clearNN() and detachNN() further simplified

NNbenchmark 3.1.0 - 2020-08-24 - Submitted to CRAN
==================================================
- change version number and sent to CRAN

NNbenchmark 3.0.7 - 2020-08-24
==============================
- simplify clearNN()
- Christophe Dutang added as author
- Email address: rpackages--@--inmodelia
- false link replaced by the table header "Packages" in README.md
- NNtrainPredict.R: odir <- tempdir() rather than getwd()

NNbenchmark 3.0.5 - 2020-07-30
==============================
- allow for nrep = 1
- added examples to NNtrainPredict
- changed echoreport to logical

NNbenchmark 3.0.4 - 2020-07-03
==============================
- remove commented traces
- add an argument to trainPredict_1mth1data()
- add mWoodG1 rda file (Simon Wood's GAM test file for Gaussian family)
